syntax = "proto3";

package chat;

service Chat {
  rpc GetResponse (ChatRequest) returns (ChatResponse);
}

message ChatRequest {
  string message = 1;
}

message ChatResponse {
  string reply = 1;
}
